...
                                      ),
                                    ],
                                  ),
                                  Padding(
                                    padding: const EdgeInsets.only(right: 10.0),
                                    child: ElevatedButton(
                                        key: const Key("edit 2"),
                                        onPressed: () {},
                                        child: Icon(
                                          Icons.edit,
                                          size: isTablet ? 40 : 25,
                                        )),
                                  )
...
                                        ],
                                      ),
                                      Padding(
                                        padding:
                                            const EdgeInsets.only(right: 10.0),
                                        child: ElevatedButton(
                                            key: const Key("edit 1"),
                                            onPressed: () {},
                                            child: Icon(
                                              Icons.edit,
                                              size: isTablet ? 40 : 25,
                                            )),
                                      )
...
                                                          padding:
                                                              const EdgeInsets
                                                                  .only(
                                                                  bottom: 8.0),
                                                          child: TextField(
                                                            key: const Key(
                                                                "steam pressure"),
                                                            textAlign: TextAlign
                                                                .center,
                                                            style: TextStyle(
                                                              fontSize: isTablet
                                                                  ? 35
                                                                  : 20,
...
                                                          padding:
                                                              const EdgeInsets
                                                                  .only(
                                                                  bottom: 8.0),
                                                          child: TextField(
                                                            key: const Key(
                                                                "steam flow"),
                                                            textAlign: TextAlign
                                                                .center,
                                                            style: TextStyle(
                                                                fontSize:
                                                                    isTablet
                                                                        ? 35
...
                                                          padding:
                                                              const EdgeInsets
                                                                  .only(
                                                                  bottom: 8.0),
                                                          child: TextField(
                                                            key: const Key(
                                                                "water level"),
                                                            textAlign: TextAlign
                                                                .center,
                                                            style: TextStyle(
                                                                fontSize:
                                                                    isTablet
                                                                        ? 35
...
                                                          padding:
                                                              const EdgeInsets
                                                                  .only(
                                                                  bottom: 8.0),
                                                          child: TextField(
                                                            key: const Key(
                                                                "power frequency"),
                                                            textAlign: TextAlign
                                                                .center,
                                                            style: TextStyle(
                                                                fontSize:
                                                                    isTablet
                                                                        ? 35
...
