...
                                padding: EdgeInsets.only(
                                    left: 15.0,
                                    right: 20.0,
                                    top: 8.0,
                                    bottom: 8.0),
                                child: TextField(
                                  key: Key("mobile number"),
                                  decoration: InputDecoration(
                                    filled: true,
                                    fillColor: Colors.white,
                                    border: OutlineInputBorder(),
                                  ),
                                ),
...
                            ),
                          ],
                        ),
                        Padding(
                          padding: const EdgeInsets.all(15.0),
                          child: ElevatedButton(
                              key: const Key("get OTP button"),
                              child: Text(
                                'Get Activation Code',
                                style: TextStyle(fontSize: isTablet ? 30 : 15),
                              ),
                              onPressed: () {
                                Navigator.push(
...
