...
                    ),
                    SizedBox(
                      height: screenSize.height * 0.08,
                    ),
                    Center(
                      child: ElevatedButton(
                        key: const Key("submit"),
                        onPressed: () {
                          Navigator.pop(context);
                        },
                        child: Text(
                          'Submit',
                          style: TextStyle(fontSize: isTablet ? 30 : 20),
...
