...
                                  decoration: TextDecoration.underline),
                            ),
                          ],
                        ),
                        const SizedBox(height: 10),
                        ElevatedButton(
                            key: const Key("activate"),
                            child: Text(
                              'Activate',
                              style: TextStyle(fontSize: isTablet ? 30 : 15),
                            ),
                            onPressed: () {
                              Navigator.push(
...
